<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ssdk_alipay">支付宝好友</string>
    <string name="ssdk_alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>
    <string name="ssdk_alipaymoments">支付宝生活圈</string>
    <string name="ssdk_bluetooth">蓝牙</string>
    <string name="ssdk_dingding">钉钉</string>
    <string name="ssdk_dont_keep_activitys_client">由于您已开启 不保留活动 ,导致授权功能无法正常使用.我们建议您点击左下方 设置 按钮,在 开发者选项 中关闭 不保留活动 功能.</string>
    <string name="ssdk_douban">豆瓣</string>
    <string name="ssdk_dropbox">Dropbox</string>
    <string name="ssdk_email">邮件</string>
    <string name="ssdk_evernote">印象笔记</string>
    <string name="ssdk_facebook">Facebook</string>
    <string name="ssdk_facebookmessenger">Facebook Messenger</string>
    <string name="ssdk_facebookmessenger_client_inavailable">目前您的FacebookMessenger版本过低或未安装，需要安装才能使用</string>
    <string name="ssdk_flickr">Flickr</string>
    <string name="ssdk_foursquare">FourSquare</string>
    <string name="ssdk_gender_female">女</string>
    <string name="ssdk_gender_male">男</string>
    <string name="ssdk_google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="ssdk_googleplus">Google+</string>
    <string name="ssdk_instagram">Instagram</string>
    <string name="ssdk_instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="ssdk_instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="ssdk_instapaper">Instapaper</string>
    <string name="ssdk_instapaper_email">邮箱</string>
    <string name="ssdk_instapaper_login">登录</string>
    <string name="ssdk_instapaper_logining">登录中…</string>
    <string name="ssdk_instapaper_pwd">密码</string>
    <string name="ssdk_kaixin">开心网</string>
    <string name="ssdk_kakaostory">KakaoStory</string>
    <string name="ssdk_kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="ssdk_kakaotalk">KakaoTalk</string>
    <string name="ssdk_kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="ssdk_laiwang">来往</string>
    <string name="ssdk_laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="ssdk_laiwangmoments">来往动态</string>
    <string name="ssdk_line">Line</string>
    <string name="ssdk_line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="ssdk_linkedin">领英</string>
    <string name="ssdk_meipai">美拍</string>
    <string name="ssdk_mingdao">明道</string>
    <string name="ssdk_mingdao_share_content">网页分享</string>
    <string name="ssdk_neteasemicroblog">网易微博</string>
    <string name="ssdk_oks_cancel">取消</string>
    <string name="ssdk_oks_confirm">确定</string>
    <string name="ssdk_oks_contacts">联系人</string>
    <string name="ssdk_oks_multi_share">图文分享</string>
    <string name="ssdk_oks_pull_to_refresh">下拉刷新</string>
    <string name="ssdk_oks_refreshing">刷新中…</string>
    <string name="ssdk_oks_release_to_refresh">松开刷新</string>
    <string name="ssdk_oks_share">分享</string>
    <string name="ssdk_oks_share_canceled">分享已取消</string>
    <string name="ssdk_oks_share_completed">分享成功</string>
    <string name="ssdk_oks_share_failed">分享失败</string>
    <string name="ssdk_oks_sharing">分享操作正在后台进行…</string>
    <string name="ssdk_pinterest">Pinterest</string>
    <string name="ssdk_pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="ssdk_plurk">Plurk</string>
    <string name="ssdk_pocket">Pocket</string>
    <string name="ssdk_qq">QQ</string>
    <string name="ssdk_qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="ssdk_qzone">QQ空间</string>
    <string name="ssdk_renren">人人网</string>
    <string name="ssdk_share_to_facebook">分享到Facebook</string>
    <string name="ssdk_share_to_googleplus">分享到Google+</string>
    <string name="ssdk_share_to_mingdao">分享到明道</string>
    <string name="ssdk_share_to_qq">分享到QQ</string>
    <string name="ssdk_share_to_qzone">分享到QQ空间</string>
    <string name="ssdk_share_to_qzone_default">来自%s的分享</string>
    <string name="ssdk_share_to_youtube">分享到Youtube</string>
    <string name="ssdk_shortmessage">信息</string>
    <string name="ssdk_sina_web_close">关闭</string>
    <string name="ssdk_sina_web_login_title">登录-新浪微博</string>
    <string name="ssdk_sina_web_net_error">网络出错啦，请点击按钮重新加载</string>
    <string name="ssdk_sina_web_refresh">重新加载</string>
    <string name="ssdk_sina_web_title">微博分享</string>
    <string name="ssdk_sinaweibo">新浪微博</string>
    <string name="ssdk_sms_btn_next">下一步</string>
    <string name="ssdk_sms_btn_sende_voice">发送语音验证</string>
    <string name="ssdk_sms_btn_submit">提交</string>
    <string name="ssdk_sms_china">中国</string>
    <string name="ssdk_sms_choose_country">选择国家和地区</string>
    <string name="ssdk_sms_code">验证码</string>
    <string name="ssdk_sms_country_search">搜索</string>
    <string name="ssdk_sms_dialog_btn_back">返回</string>
    <string name="ssdk_sms_dialog_btn_cancel">取消</string>
    <string name="ssdk_sms_dialog_btn_login">确认登录</string>
    <string name="ssdk_sms_dialog_btn_ok">好</string>
    <string name="ssdk_sms_dialog_btn_sure">我知道了</string>
    <string name="ssdk_sms_dialog_btn_wait">等待</string>
    <string name="ssdk_sms_dialog_close_identify_page">验证码短信可能略有延迟，确定返回\10并重新开始？</string>
    <string name="ssdk_sms_dialog_confirm_des">我们将发送验证码短信到这个手机号：\10</string>
    <string name="ssdk_sms_dialog_confirm_title">确认手机号码</string>
    <string name="ssdk_sms_dialog_error_code">验证码不正确，请重新填写</string>
    <string name="ssdk_sms_dialog_error_des">您输入的是一个无效手机号码</string>
    <string name="ssdk_sms_dialog_error_desc_100">服务器错误</string>
    <string name="ssdk_sms_dialog_error_desc_101">没有权限请求</string>
    <string name="ssdk_sms_dialog_error_desc_102">解密数据失败</string>
    <string name="ssdk_sms_dialog_error_desc_103">请求参数列表中缺少必要数据</string>
    <string name="ssdk_sms_dialog_error_desc_104">请求数据非法</string>
    <string name="ssdk_sms_dialog_error_desc_105">验证码错误</string>
    <string name="ssdk_sms_dialog_error_desc_106">请求发送验证码失败</string>
    <string name="ssdk_sms_dialog_error_desc_107">该号码超过接收验证码上\10限次数，请明日再试</string>
    <string name="ssdk_sms_dialog_error_desc_108">该设备超过请求发送验证\10码上限次数，请明日再试</string>
    <string name="ssdk_sms_dialog_error_desc_109">发送短信太频繁</string>
    <string name="ssdk_sms_dialog_error_title">手机号码错误</string>
    <string name="ssdk_sms_dialog_login_success">登录成功</string>
    <string name="ssdk_sms_dialog_net_error">网络不给力，请稍后重试</string>
    <string name="ssdk_sms_dialog_send_success">发送成功</string>
    <string name="ssdk_sms_dialog_smart_dec">您的设备为安全设备，该号码已通过智能\10云验证，无需短信验证\10（本验证过程不存在任何安全隐患）</string>
    <string name="ssdk_sms_dialog_smart_title">恭喜！该号码已通过云检测</string>
    <string name="ssdk_sms_dialog_system_error">系统有点小问题，请稍后重试</string>
    <string name="ssdk_sms_dialog_voice_text">我们将以电话的方式告知您验证码，\10请注意接听</string>
    <string name="ssdk_sms_input_code_hint">请输入验证码</string>
    <string name="ssdk_sms_input_phone_hint">请输入手机号码</string>
    <string name="ssdk_sms_input_voice_code">短信验证码收不到？请尝试&lt;font color=#2ba245&gt;语音验证码&lt;/font&gt;</string>
    <string name="ssdk_sms_login">短信登录</string>
    <string name="ssdk_sms_phone">手机号</string>
    <string name="ssdk_sms_send_again">重新发送</string>
    <string name="ssdk_sms_top_identify_text">短信已发送，请填写验证码</string>
    <string name="ssdk_sms_top_text">请输入您的手机号</string>
    <string name="ssdk_sms_zone">国家/地区</string>
    <string name="ssdk_sohumicroblog">搜狐微博</string>
    <string name="ssdk_sohusuishenkan">搜狐随身看</string>
    <string name="ssdk_symbol_ellipsis">...</string>
    <string name="ssdk_telegram">Telegram</string>
    <string name="ssdk_telegram_client_inavailable">目前您的Telegram版本过低或未安装，需要安装才能使用</string>
    <string name="ssdk_tencentweibo">腾讯微博</string>
    <string name="ssdk_tumblr">Tumblr</string>
    <string name="ssdk_twitter">Twitter</string>
    <string name="ssdk_use_login_button">请改用“登录”按钮</string>
    <string name="ssdk_vkontakte">VK</string>
    <string name="ssdk_website">http://www.mob.com</string>
    <string name="ssdk_wechat">微信好友</string>
    <string name="ssdk_wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="ssdk_wechatfavorite">微信收藏</string>
    <string name="ssdk_wechatmoments">微信朋友圈</string>
    <string name="ssdk_weibo_oauth_regiseter">应用授权</string>
    <string name="ssdk_weibo_upload_content">分享图片</string>
    <string name="ssdk_whatsapp">WhatsApp</string>
    <string name="ssdk_whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="ssdk_yixin">易信</string>
    <string name="ssdk_yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="ssdk_yixinmoments">易信朋友圈</string>
    <string name="ssdk_youdao">有道云笔记</string>
    <string name="ssdk_youtube">Youtube</string>
    <string name="cube_mints_exit_tip">Tap back once more to exit.</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="friday">五</string>
    <string name="fx_cancel">取　消</string>
    <string name="fx_fxd">分享到</string>
    <string name="fx_qqweibo">腾讯微博</string>
    <string name="fx_sinaweibo">新浪微博</string>
    <string name="fx_weixinfriend">微信好友</string>
    <string name="fx_weixinpyq">微信朋友圈</string>
    <string name="getyzm">获取验证码</string>
    <string name="jiansuo">检索</string>
    <string name="loginbtnwebo">微博</string>
    <string name="loginbtnwechat">微信</string>
    <string name="loginbtqq">QQ</string>
    <string name="logintishi">用以下账户来登录吧</string>
    <string name="mobileno">手机号</string>
    <string name="monday">一</string>
    <string name="mycell">我的收藏</string>
    <string name="newssearch">搜索</string>
    <string name="saturday">六</string>
    <string name="set">设置</string>
    <string name="sunday">日</string>
    <string name="tab_db">读报</string>
    <string name="tab_fuwu">服务</string>
    <string name="tab_home">首页</string>
    <string name="tab_jiaofei">缴费</string>
    <string name="tab_pc">我的</string>
    <string name="tab_rb_dsnb">都市女报</string>
    <string name="tab_rb_jnrb">济南日报</string>
    <string name="tab_rb_jnsb">济南时报</string>
    <string name="tab_rb_mall">商城</string>
    <string name="tab_square">服务</string>
    <string name="thesday">二</string>
    <string name="thursday">四</string>
    <string name="unlogined">未登录</string>
    <string name="wednesday">三</string>
    <string name="yzm">验证码</string>
</resources>