<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/mainlayout" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/topnav"/>
    <RelativeLayout android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <EditText android:textSize="20sp" android:textColor="@color/black" android:id="@+id/mobileno" android:background="@drawable/mobileinputbg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/mobileno" android:drawablePadding="5dp" android:inputType="number" android:textCursorDrawable="@null"/>
        <TextView android:textSize="18sp" android:textColor="#2f8aff" android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/postyzm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="@string/getyzm" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="20sp" android:background="#2f8aff" android:layout_width="1dp" android:layout_height="wrap_content" android:layout_margin="10dp" android:layout_toLeftOf="@+id/postyzm"/>
    </RelativeLayout>
    <EditText android:textSize="20sp" android:textColor="@color/black" android:id="@+id/yanzhengma" android:background="@drawable/mobileinputbg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:hint="@string/yzm" android:drawablePadding="5dp" android:inputType="number" android:textCursorDrawable="@null"/>
    <Button android:textSize="22sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/dologin" android:background="@drawable/loginbtnbg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="登　录"/>
    <RelativeLayout android:layout_gravity="center_horizontal" android:padding="20dp" android:layout_width="260dp" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <TextView android:textSize="18sp" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@+id/weixin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loginbtnwechat" android:drawableTop="@mipmap/loginbtn_wechat" android:drawablePadding="3dp" android:layout_alignParentLeft="true"/>
        <TextView android:textSize="18sp" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@+id/sinalogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loginbtnwebo" android:drawableTop="@mipmap/loginbtn_weibo" android:drawablePadding="3dp" android:layout_centerHorizontal="true"/>
        <TextView android:textSize="18sp" android:textColor="@color/black" android:gravity="center_horizontal" android:id="@+id/qqlogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loginbtqq" android:drawableTop="@mipmap/loginbtn_qq" android:drawablePadding="3dp" android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
